--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                             <i class="fas fa-question-circle"></i>
                         </div>
                         <div class="project-content">
-                            <h3>Terzi QR Menu</h3>
+                            <h3>Terzi Game</h3>
                             <div class="project-notes">
                                 <i class="fas fa-clock"></i>
                                 <div>
-                                    <p>Coming soon...</p><br>
-                                    <p class="turkish">Çok yakında...</p>
+                                    <h3>Terzi Game</h3>
+                                    <a href="projects/Terzi-Game" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
