--- a/index.html
+++ b/index.html
@@ -72,14 +72,18 @@
                     
                     <!-- Project 3 -->
                     <div class="project-item">
-                        <div class="project-logo coming-soon">
-                            <i class="fas fa-question-circle"></i>
+                        <div class="project-logo">
+                            <img src="imagorseller/terzigamelogo.png" alt="Terzi Game Logo">
                         </div>
                         <div class="project-content">
                             <h3>Terzi Game</h3>
+                            <div class="project-notes">
+                                <i class="fas fa-info-circle"></i>
                                 <div>
-                                    <a href="projects/Terzi-Game" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
+                                    <p>A very simple 2D pixel game made with Phaser JS.</p>
                                 </div>
+                            </div>
+                            <a href="projects/Terzi-Game" class="project-link">View Project <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
